Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -1,17 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Image Classification on Fashion MNIST Dataset.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -149,7 +136,7 @@
         "outputId": "5342b83c-8deb-481c-ad20-e4fad90fcc45"
       },
       "source": [
-        "# Plot the first image in the training\n",
+        "# Plot the first image in the training set\n",
         "plt.imshow(train_images[0], cmap='binary')\n",
         "plt.colorbar()\n",
         "plt.show()"
@@ -189,6 +176,7 @@
         "colab": {}
       },
       "source": [
+        "# Divide the values by 255\n",
         "train_images = train_images / 255\n",
         "test_images = test_images / 255"
       ],
@@ -257,15 +245,12 @@
     },
     {
       "cell_type": "markdown",
-      "metadata": {
-        "id": "NEoKvz7SKlq-",
-        "colab_type": "text"
-      },
+      "metadata": {},
       "source": [
         "### Setting Up the Layers\n",
-        "The first layer in this neural network, `keras.layers.Flatten`, which will transform the format of the images from a two-dimensional array (of 28 by 28 pixels) to a one-dimensional array (of 28 * 28 = 784 pixels).\n",
+        "The first layer in this neural network, keras.layers.Flatten, which will transform the format of the images from a two-dimensional array (of 28 by 28 pixels) to a one-dimensional array (of 28 * 28 = 784 pixels).\n",
         "\n",
-        "After the pixels are flattened, the network consists of a sequence of two `keras.layers.Dense layers`. The first Dense layer has 128 nodes (or neurons) and the second layer will return a softmax array with length of 10."
+        "After the pixels are flattened, the network consists of a sequence of two keras.layers.Dense layers. The first Dense layer has 128 nodes (or neurons) and the second layer will return a softmax array with length of 10."
       ]
     },
     {
@@ -340,6 +325,7 @@
         "outputId": "bc754d97-afc7-4b42-e543-1f7f189d4d3a"
       },
       "source": [
+        "# Fit the model\n",
         "model.fit(train_images, train_labels, epochs=10)"
       ],
       "execution_count": 9,
@@ -487,6 +473,7 @@
         "outputId": "2a559eae-7488-4e20-fb13-7eac42b2b934"
       },
       "source": [
+        "# Plot the first 25 predictions\n",
         "plt.figure(figsize=(10,10))\n",
         "for i in range(25):\n",
         "  plt.subplot(5,5,i+1)\n",
@@ -513,5 +500,18 @@
         }
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Image Classification on Fashion MNIST Dataset.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
