Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -248,9 +248,9 @@
       "metadata": {},
       "source": [
         "### Setting Up the Layers\n",
-        "The first layer in this neural network, keras.layers.Flatten, which will transform the format of the images from a two-dimensional array (of 28 by 28 pixels) to a one-dimensional array (of 28 * 28 = 784 pixels).\n",
+        "The first layer in this neural network, `keras.layers.Flatten`, which will transform the format of the images from a two-dimensional array (of 28 by 28 pixels) to a one-dimensional array (of 28 * 28 = 784 pixels).\n",
         "\n",
-        "After the pixels are flattened, the network consists of a sequence of two keras.layers.Dense layers. The first Dense layer has 128 nodes (or neurons) and the second layer will return a softmax array with length of 10."
+        "After the pixels are flattened, the network consists of a sequence of two `keras.layers.Dense layers`. The first Dense layer has 128 nodes (or neurons) and the second layer will return a softmax array with length of 10."
       ]
     },
     {
