Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -423,7 +423,7 @@
         "colab_type": "text"
       },
       "source": [
-        "It turns out that the accuracy on the test dataset is a little less than the accuracy on the training dataset."
+        "It turns out that the accuracy on the test set is a little less than the accuracy on the training set."
       ]
     },
     {
