Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -41,7 +41,7 @@
    },
    "source": [
     "## Loading the Data\n",
-    "We can mport and load the Fashion MNIST dataset directly from TensorFlow Loading the dataset returns four NumPy arrays:\n",
+    "We can import and load the Fashion MNIST dataset directly from TensorFlow Loading the dataset returns four NumPy arrays:\n",
     "\n",
     "- The train_images and train_labels arrays are the training set, which is the data the model uses to learn.\n",
     "- The model is tested against the test set, the test_images, and test_labels arrays.\n"
