Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -8,7 +8,7 @@
    },
    "source": [
     "# Image Classification on Fashion MNIST Dataset\n",
-    "This project is one of my Deep Learning projects. For this project, we have a [Fashion MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset which contains a training set of 60,000 examples and a test set of 10,000 examples. Each example is a 28x28 pixels grayscale image, associated with a label from 10 classes. Here's an example how the data looks,\n",
+    "This project is one of my Deep Learning projects. For this project, we have the [Fashion MNIST](https://github.com/zalandoresearch/fashion-mnist) dataset which contains a training set of 60,000 examples and a test set of 10,000 examples. Each example is a 28x28 pixels grayscale image, associated with a label from 10 classes. Here's an example how the data looks,\n",
     "\n",
     "![Fashion-MNIST samples (by Zalando, MIT License)](https://github.com/zalandoresearch/fashion-mnist/raw/master/doc/img/fashion-mnist-sprite.png)\n",
     "\n",
