Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -85,7 +85,7 @@
     "| 8     | Bag         |\n",
     "| 9     | Ankle boot  |\n",
     "\n",
-    "Each image is mapped to a single label. Since the class names are not included with the dataset, we will create a list to store these class names:"
+    "Each image is mapped to a single label. Since the class names are not included with the dataset, we will create a list to store these class names."
    ]
   },
   {
