Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -235,7 +235,7 @@
    },
    "source": [
     "## Building the Model\n",
-    "Now, we can build the neural network by configuring the layers of the model, then compiling the model."
+    "Now, we can build the neural network by configuring the layers of the model and compiling the model."
    ]
   },
   {
