Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -245,7 +245,7 @@
     "id": "NEoKvz7SKlq-"
    },
    "source": [
-    "### Setting Up the Layers\n",
+    "### Configuring the Layers\n",
     "The first layer in this neural network, `keras.layers.Flatten`, which will transform the format of the images from a two-dimensional array (of 28 by 28 pixels) to a one-dimensional array (of 28 * 28 = 784 pixels).\n",
     "\n",
     "After the pixels are flattened, the network consists of a sequence of two `keras.layers.Dense` layers. The first Dense layer has 128 nodes (or neurons) and the second layer will return a softmax array with length of 10."
@@ -261,7 +261,7 @@
    },
    "outputs": [],
    "source": [
-    "# Set up the layers\n",
+    "# Configure the layers\n",
     "model = keras.Sequential([\n",
     "                          keras.layers.Flatten(input_shape=(28, 28)),\n",
     "                          keras.layers.Dense(128, activation='relu'),\n",
