Update Image Classification on Fashion MNIST Dataset.ipynb

--- a/Image Classification on Fashion MNIST Dataset.ipynb
+++ b/Image Classification on Fashion MNIST Dataset.ipynb
@@ -385,7 +385,7 @@
    },
    "source": [
     "## Evaluating the Model\n",
-    "Next, compare how the model performs on the test dataset."
+    "Next, compare how the model performs on the test data."
    ]
   },
   {
@@ -421,7 +421,7 @@
     "id": "InfTtAt8PulX"
    },
    "source": [
-    "It turns out that the accuracy on the test dataset is a little less than the accuracy on the training dataset."
+    "It turns out that the accuracy on the test dataset is a little less than the accuracy on the training data."
    ]
   },
   {
