Update Sentiment Analysis on IMDB Movie Reviews.ipynb

--- a/Sentiment Analysis on IMDB Movie Reviews.ipynb
+++ b/Sentiment Analysis on IMDB Movie Reviews.ipynb
@@ -499,14 +499,14 @@
           "base_uri": "https://localhost:8080/",
           "height": 52
         },
-        "outputId": "d7c874c1-9a3a-4530-916e-c022eba23ea2"
+        "outputId": "8ea544e9-8bf5-4a1c-e462-9d28eb9a9ed3"
       },
       "source": [
         "# Predict on a positive movie review\n",
-        "model.predict([['This is the best movie I have ever seen!'],\n",
-        "              ['This movie is very horrible! The acting is very poor!']])"
+        "model.predict(['This is the best movie I have ever seen!',\n",
+        "               'This movie is very horrible! The acting is very poor!'])"
       ],
-      "execution_count": 25,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +519,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 25
+          "execution_count": 28
         }
       ]
     },
