updated markdown texts

--- a/Sentiment Analysis on IMDB Movie Reviews.ipynb
+++ b/Sentiment Analysis on IMDB Movie Reviews.ipynb
@@ -1,17 +1,4 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "name": "Sentiment Analysis on IMDB Movie Reviews.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -78,12 +65,6 @@
         "colab_type": "text"
       },
       "source": [
-        "\n",
-        "\n",
-        "```\n",
-        "`# This is formatted as code`\n",
-        "```\n",
-        "\n",
         "Let's view the first 5 samples and labels of our training data. "
       ]
     },
@@ -534,5 +515,18 @@
         "Since the first review has a value closer to 1, the model classifies this as a positive review. On the other hand, the second review has a value closer to 0, so the model classifies this as a negative review."
       ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "name": "Sentiment Analysis on IMDB Movie Reviews.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
