Updated using Colaboratory

--- a/Sentiment Analysis on IMDB Movie Reviews.ipynb
+++ b/Sentiment Analysis on IMDB Movie Reviews.ipynb
@@ -1,4 +1,17 @@
 {
+  "nbformat": 4,
+  "nbformat_minor": 0,
+  "metadata": {
+    "colab": {
+      "name": "Sentiment Analysis on IMDB Movie Reviews.ipynb",
+      "provenance": [],
+      "collapsed_sections": []
+    },
+    "kernelspec": {
+      "name": "python3",
+      "display_name": "Python 3"
+    }
+  },
   "cells": [
     {
       "cell_type": "markdown",
@@ -27,7 +40,7 @@
         "import tensorflow_hub as hub\n",
         "import tensorflow_datasets as tfds"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -55,7 +68,7 @@
         "    split=('train[:60%]', 'train[60%:]', 'test'),\n",
         "    as_supervised=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -78,7 +91,7 @@
       "source": [
         "train_samples_batch, train_labels_batch = next(iter(train_data.batch(5)))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -86,17 +99,17 @@
       "metadata": {
         "id": "jm-kqK_b5RJq",
         "colab_type": "code",
-        "outputId": "41d2e096-78b4-40a9-df0d-d1e8c5c51bb5",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 159
-        }
+        },
+        "outputId": "41d2e096-78b4-40a9-df0d-d1e8c5c51bb5"
       },
       "source": [
         "# View the first 5 samples\n",
         "train_samples_batch"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -123,17 +136,17 @@
       "metadata": {
         "id": "j5vUGuLC5fDL",
         "colab_type": "code",
-        "outputId": "050c046e-aa3d-4bf2-e1ef-4ea89fe1d033",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "050c046e-aa3d-4bf2-e1ef-4ea89fe1d033"
       },
       "source": [
         "# View the first 5 labels\n",
         "train_labels_batch"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -183,7 +196,7 @@
         "hub_layer = hub.KerasLayer(embedding, input_shape=[],\n",
         "                          dtype=tf.string, trainable=True)"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -213,7 +226,7 @@
         "model.add(tf.keras.layers.Dense(16, activation='relu'))\n",
         "model.add(tf.keras.layers.Dense(1, activation='sigmoid'))"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -221,17 +234,17 @@
       "metadata": {
         "id": "8WUTgE5K8OjF",
         "colab_type": "code",
-        "outputId": "e67df584-9672-4a74-fb94-c83e06343719",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 260
-        }
+        },
+        "outputId": "e67df584-9672-4a74-fb94-c83e06343719"
       },
       "source": [
         "# View the model's architecture\n",
         "model.summary()"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -282,7 +295,7 @@
         "              optimizer='adam',\n",
         "              metrics=['accuracy'])"
       ],
-      "execution_count": 0,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -301,11 +314,11 @@
       "metadata": {
         "id": "ORN1OZTf-Qga",
         "colab_type": "code",
-        "outputId": "2de7a460-7836-46bb-b30e-899bf373b9e3",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 711
-        }
+        },
+        "outputId": "2de7a460-7836-46bb-b30e-899bf373b9e3"
       },
       "source": [
         "# Fit the model\n",
@@ -313,7 +326,7 @@
         "                    epochs=20,\n",
         "                    validation_data=validation_data.batch(512))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -378,11 +391,11 @@
       "metadata": {
         "id": "Rd-3bFKZBL0b",
         "colab_type": "code",
-        "outputId": "e9fff88e-bb80-4a1b-fd38-8fb41a336a21",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 283
-        }
+        },
+        "outputId": "e9fff88e-bb80-4a1b-fd38-8fb41a336a21"
       },
       "source": [
         "import matplotlib.pyplot as plt\n",
@@ -397,7 +410,7 @@
         "plt.legend(loc='lower right')\n",
         "plt.show()"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "display_data",
@@ -430,16 +443,16 @@
       "metadata": {
         "id": "klR02TO1-Og4",
         "colab_type": "code",
-        "outputId": "7dc65b13-9118-4613-d197-49777764674f",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 35
-        }
+        },
+        "outputId": "7dc65b13-9118-4613-d197-49777764674f"
       },
       "source": [
         "test_loss, test_acc = model.evaluate(test_data.batch(512), verbose=2)"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -477,18 +490,18 @@
       "metadata": {
         "id": "jhXcBBiJDCPW",
         "colab_type": "code",
-        "outputId": "8305e8ee-431f-4746-cf65-f2c45a2dcdf9",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 52
-        }
+        },
+        "outputId": "8305e8ee-431f-4746-cf65-f2c45a2dcdf9"
       },
       "source": [
-        "# Predict on a positive movie review\n",
+        "# Predict on sample movie reviews\n",
         "model.predict(['This is the best movie I have ever seen!',\n",
         "               'This movie is very horrible! The acting is very poor!'])"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -515,18 +528,5 @@
         "Since the first review has a value closer to 1, the model classifies this as a positive review. On the other hand, the second review has a value closer to 0, so the model classifies this as a negative review."
       ]
     }
-  ],
-  "metadata": {
-    "colab": {
-      "name": "Sentiment Analysis on IMDB Movie Reviews.ipynb",
-      "provenance": [],
-      "collapsed_sections": []
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    }
-  },
-  "nbformat": 4,
-  "nbformat_minor": 0
+  ]
 }
