Update Sentiment Analysis on IMDB Movie Reviews.ipynb

--- a/Sentiment Analysis on IMDB Movie Reviews.ipynb
+++ b/Sentiment Analysis on IMDB Movie Reviews.ipynb
@@ -20,8 +20,8 @@
         "colab_type": "text"
       },
       "source": [
-        "# Sentiment Analysis on IMDB Movie Reviews\n",
-        "This project is one of my Deep Learning projects. For this project, we have the [IMDB](https://www.tensorflow.org/api_docs/python/tf/keras/datasets/imdb) dataset that contains the text of 50,000 movie reviews from the Internet Movie Database.\n",
+        "# Sentiment Analysis on IMDb Movie Reviews\n",
+        "This project is one of my Deep Learning projects. For this project, we have the [IMDB](https://www.tensorflow.org/api_docs/python/tf/keras/datasets/imdb) dataset that contains the text of 50,000 movie reviews from the Internet Movie Database (IMDb).\n",
         "\n",
         "The goal of this project is apply [transfer learning](https://en.wikipedia.org/wiki/Transfer_learning) to classifiy movie reviews as positive or negative based on the text of the review."
       ]
