Update Sentiment Analysis on IMDB Movie Reviews.ipynb

--- a/Sentiment Analysis on IMDB Movie Reviews.ipynb
+++ b/Sentiment Analysis on IMDB Movie Reviews.ipynb
@@ -51,7 +51,7 @@
       },
       "source": [
         "## Loading the Data\n",
-        "We can import and load the IMDB dataset directly from TensorFlow datasets. Originally, the dataset is split into 25,000 reviews for training and 25,000 reviews for testing. We will split the training set with a ratio of 60:40. So, we will end up with 15,000 samples for training, 10,000 samples for validation and 25,000 samples for testing.\n"
+        "We can import and load the IMDb dataset directly from TensorFlow datasets. Originally, the dataset is split into 25,000 reviews for training and 25,000 reviews for testing. We will split the training set with a ratio of 60:40. So, we will end up with 15,000 samples for training, 10,000 samples for validation and 25,000 samples for testing.\n"
       ]
     },
     {
